error handling, styles cleanup, element clipping fix for reset page and profile page

--- a/client/src/pages/UpdateProfile/UpdateProfile.scss
+++ b/client/src/pages/UpdateProfile/UpdateProfile.scss
@@ -59,8 +59,7 @@
 
 @media only screen and (max-width: 1024px) {
   #profile.container {
-    height: calc(var(--bodyHeight) - 3.4rem);
-    padding-top: 1rem;
-    margin-top: 3.2rem;
+    height: calc(var(--bodyHeight) - 5.4rem);
+    margin-top: 5.2rem;
   }
 }
